-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: None
-
Component/s: hotspot
-
b23
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8294388 | 17.0.6-oracle | Calvin Cheung | P4 | Resolved | Fixed | b01 |
| JDK-8292767 | 17.0.5 | Jie Fu | P4 | Resolved | Fixed | b04 |
| JDK-8294542 | 11.0.18-oracle | Calvin Cheung | P4 | Resolved | Fixed | b01 |
| JDK-8292768 | 11.0.17 | Jie Fu | P4 | Resolved | Fixed | b04 |
| JDK-8302627 | 8u381 | Ivan Bereziuk | P4 | Resolved | Fixed | b01 |
Operating System Metrics:
Provider: cgroupv1
Effective CPU Count: 8
CPU Period: 100000us
CPU Quota: -1
CPU Shares: -1
List of Processors, 8 total:
0 1 2 3 4 5 6 7
List of Effective Processors: N/A
List of Memory Nodes, 1 total:
0
List of Available Memory Nodes: N/A
Memory Limit: 50.00M
Memory Soft Limit: Unlimited
Memory & Swap Limit: 100.00M
Maximum Processes Limit: 4194305
set memory.swappiness to 0,swap space will not be used
https://www.kernel.org/doc/Documentation/cgroup-v1/memory.txt
Memory & Swap Limit should be 50.00M
test case:
cgcreate -g memory:foo1
cd /sys/fs/cgroup/memory/foo1
echo 52428800 > memory.limit_in_bytes
echo 104857600 > memory.memsw.limit_in_bytes
memory.swappiness default value is 60
cgexec -g memory:foo1 java -XshowSettings:system -Xms60m -XX:+AlwaysPreTouch -version (success)
echo 0 > memory.swappiness
cgexec -g memory:foo1 java -XshowSettings:system -Xms60m -XX:+AlwaysPreTouch -version (killed)
- backported by
-
JDK-8292767 CgroupV1 detection code should consider memory.swappiness
-
- Resolved
-
-
JDK-8292768 CgroupV1 detection code should consider memory.swappiness
-
- Resolved
-
-
JDK-8294388 CgroupV1 detection code should consider memory.swappiness
-
- Resolved
-
-
JDK-8294542 CgroupV1 detection code should consider memory.swappiness
-
- Resolved
-
-
JDK-8302627 CgroupV1 detection code should consider memory.swappiness
-
- Resolved
-
- relates to
-
JDK-8292852 [11u] TestMemoryWithCgroupV1 fails after JDK-8292768
-
- Resolved
-
-
JDK-8316418 containers/docker/TestMemoryWithCgroupV1.java get OOM killed with Parallel GC
-
- Resolved
-
- links to
-
Commit
openjdk/jdk11u-dev/317f79cc
-
Commit
openjdk/jdk17u-dev/b30d962f
-
Commit
openjdk/jdk/46d208fb
-
Review
openjdk/jdk11u-dev/1336
-
Review
openjdk/jdk17u-dev/641
-
Review
openjdk/jdk/8285