8284950: CgroupV1 detection code should consider memory.swappiness

Backport-of: 46d208fb1ce9a3d45bee2afda824f15c84a5e4d2